syntax = 'proto3';

// #BEGIN(namereg)
// Name Registry Service Definition 
service NameReg {
	rpc GetEntry(NameRegEntryParam) returns (NameRegEntry);
	rpc GetEntries(FilterListParam) returns (NameRegEntryList);
	rpc TransactNameReg(TransactNameRegParam) returns (TxReceipt);
	rpc TransactNameRegAndHold(TransactNameRegParam) returns (NameRegEntry);
}

// Params


message FilterListParam {
	repeated FilterData filters = 1;
}

message NameRegEntryParam {
	string name = 1;
}

message TransactNameRegParam {
	InputAccount inputAccount = 1;
	string name = 2;
	string data = 3;
	uint64 fee = 4;
	uint64 amount = 5;
}

// Results
message NameRegEntry {
	// registered name for the entry
	string Name    = 1;
	bytes  Owner   = 2;
	string Data    = 3;
	uint64 Expires = 4;
}

message NameRegEntryList {
	uint64 BlockHeight = 1;
	repeated NameRegEntry Names = 2;
}

// This situation can be remedied multiple ways 
message TxReceipt {
	bytes TxHash          = 1;
	bool  CreatesContract = 2;
	bytes ContractAddress = 3;
}

message FilterData {
	string field = 1;
	string op = 2;
	string value = 3;
}

message InputAccount {
	bytes privateKey = 1;
	bytes address = 2;
}